--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,15 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.container-wrapper {
+
+}
+
+.container-wrapper--red {
+    background-color: #f05f40;
+    color: white;
+}
+
 .alert-container .col-12 {
     padding-left: 0;
     padding-right: 0;
@@ -43,20 +52,49 @@ body {
 
 .features-container{}
 
+/* Page Headers */
+
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+
+}
+.quotes .page-header {
+    margin-bottom: 25px;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
 /*Block dividers */
 .block-divider {
     width: 120px;
     height: 4px;
     border: 0;
+    background-color: #444;
 }
 
 .block-divider--orange {
     background-color: #f1b951;
 }
 
+.block-divider--white {
+    background-color: white;
+}
+
 .block-divider--short {
     width: 35px;
 }
+
+/* Content containers */
+
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
 
 /* Navbar */
 
@@ -131,4 +169,25 @@ body {
 .btn--red:active:focus {
     background-color: #b3462f;
     border-color: #b3462f;
+}
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.feature i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
+.feature .btn {
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
 }
